--- a/src/app/components/dashboard/dashboard.html
+++ b/src/app/components/dashboard/dashboard.html
@@ -51,9 +51,13 @@
             <div class="clock-time">{{ currentTime() }}</div>
             <div class="clock-date">{{ currentDate() }}</div>
           </div>
-          <a routerLink="/register" class="btn-create">
-            <span>✨</span> Create Account
-          </a>
+          <a routerLink="/register" class="btn-create" aria-label="Create account">
+  <span class="btn-create-icon">+</span>
+  <span class="btn-create-text">
+    <span class="btn-create-title">Create account</span>
+    <span class="btn-create-subtitle">Add a new profile</span>
+  </span>
+</a>
           <button (click)="logout()" class="btn-logout">
             <span>🚪</span> Logout
           </button>
@@ -192,3 +196,4 @@
     </div>
   </div>
 </div>
+
